added individual query
